# scrapper

./: .gitignore  README.md  README_upload.md  UPLOAD_README.md  analyze_stats.sh  analyze_upload_stats.py  possible_list.txt  pyproject.toml  retry_failed_uploads.py  run_upload.sh  upload_history.json  upload_log.txt  upload_to_rag.py  url_validator.py  urls.txt
visdom_scraper/: __init__.py  cli.py  converter.py  daemon.py  main.py  scraper.py  url_processor.py  utils.py
